--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "foundations-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "SwiftQ Backend",
   "main": "index.js",
   "scripts": {
@@ -25,10 +26,11 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -37,6 +39,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
+    "@types/socket.io": "^3.0.1",
     "eslint": "^9.30.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
